# crazyflie_trajectory_ws

./: .gitignore  README.md
docs/: architecture_doc.md  crazyflie_sim_guide.md
scripts/: activate_crazyflie_ws.sh  run_simulation.py  setup_dependencies.sh
src/cf_trajectory_controller/: package.xml  setup.cfg  setup.py
src/cf_trajectory_controller/cf_trajectory_controller/controllers/:    base_controller.py  cascaded_pid.py  conventional_smc.py  nstt_smc.py  super_twisting_smc.py
src/cf_trajectory_controller/cf_trajectory_controller/core/: cf21_parameters.py
src/cf_trajectory_controller/cf_trajectory_controller/nodes/: cf_controller_node.py  cf_gazebo_force_node.py
src/cf_trajectory_controller/cf_trajectory_controller/trajectories/: figure8_trajectory.py
src/cf_trajectory_controller/cf_trajectory_controller/utils/: cf_trajectory_plotter.py
src/cf_trajectory_controller/config/: controller_params.yaml
src/cf_trajectory_controller/launch/: cf1_full_simulation.launch.py
src/crazyflie_gazebo_sim/: CMakeLists.txt  package.xml
src/crazyflie_gazebo_sim/config/: cf1_sim_params.yaml
src/crazyflie_gazebo_sim/launch/: crazyflie_gazebo_sim.launch.py  gazebo_cf1_sim.launch.py
src/crazyflie_gazebo_sim/models/crazyflie_2_1/: model.config  model.sdf
src/crazyflie_gazebo_sim/rviz/: crazyflie_sim.rviz
src/crazyflie_gazebo_sim/src/: cf_motor_plugin.cpp
src/crazyflie_gazebo_sim/urdf/: crazyflie_2_1.urdf  crazyflie_2_1_gazebo.urdf.xacro
src/crazyflie_gazebo_sim/worlds/: crazyflie_trajectory_arena.world  crazyflie_trajectory_world.world
versions/plots/v3/: metrics_cascaded_pid_figure8.csv
