<?xml version="1.0"?>
<package format="3">
  <name>cf_trajectory_controller</name>
  <version>0.1.0</version>
  <description>
    Modular plug-and-play trajectory tracking controllers for Crazyflie 2.1.
    Supports: Cascaded PID, Conventional SMC, Super Twisting SMC, NS Terminal SMC.
  </description>
  <maintainer email="your@email.com">Yashu</maintainer>
  <license>MIT</license>
 
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>crazyflie_interfaces</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
